springboot-jaxrs-openapi-asciidoc updated.
