# example/springboot-jaxrs-openapi-asciidoc/src/main/resources/openapi/openapi.yaml
@@ -13,6 +13,8 @@ servers:
 tags:
 - name: DateController
   description: Операции с датой и временем
+- name: ProjectController
+  description: Управление проектами
 - name: TaskController
   description: Управление задачами
 paths:
@@ -30,6 +32,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DateDTO'
+  /api/v1/project/all:
+    get:
+      tags:
+      - ProjectController
+      summary: Получение всех проектов
+      description: Получение всех проектов
+      operationId: selectAllProject
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProjectDTO'
   /api/v1/task/one/{id}:
     get:
       tags:
@@ -77,6 +95,28 @@ components:
           description: Дата и время
           format: date-time
       description: Класс для передачи даты и времени
+    ProjectDTO:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Название
+        description:
+          type: string
+          description: Описание
+        created:
+          type: string
+          description: Дата создания
+          format: date-time
+        updated:
+          type: string
+          description: Дата обновления
+          format: date-time
+        version:
+          type: integer
+          description: Версия
+          format: int32
+      description: Проект
     TaskDTO:
       type: object
       properties:
